[package]
name = "accessory"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

[dependencies]
pcsc = "2.4.0"
anyhow = "1.0.34"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
rusb = "0.6.5"
crossbeam = "0.8.0"
thiserror = "1.0.22"
actyxos_sdk = { path = "../sdk", features = ["client"] }
tokio = { version = "0.3.4", features = ["full"] }
futures = "0.3.8"
serde = { version = "1.0.117", features = ["derive"] }
tokio-compat-02 = "0.1.2"

[build-dependencies]
cmake = "0.1.45"
bindgen = "0.55.1"
