[package]
name = "accessory"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

[dependencies]
pcsc = "2.4.0"
anyhow = "1.0.38"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
rusb = "0.7.0"
crossbeam = "0.8.0"
thiserror = "1.0.23"
actyxos_sdk = { path = "../sdk", features = ["client"] }
tokio = { version = "1.0.2", features = ["full"] }
futures = "0.3.12"
serde = { version = "1.0.120", features = ["derive"] }
tokio-compat-02 = "0.2.0"

[build-dependencies]
cmake = "0.1.45"
bindgen = "0.56.0"
