# Only have one member per line and the opening and ending on separate lines,
# since this is used in build scripts to populate the docker image cache!
[workspace]
members = [
  "api",
  "ax",
  "ax-futures-util",
  "certs",
  "settings",
  "crypto",
  "libp2p-streaming-response",
  "node",
  "node-ffi",
  "node-manager-bindings",
  "runtime",
  "swarm",
  "swarm/cli",
  "swarm/harness",
  "swarm/old-formats",
  "trees",
  "util",
]
resolver = "2"
package.edition = "2021"

# This can only be set per workspace. In release, we rely on a setting a custom
# panic hook (see `node/src/util.rs::init_panic_hook`), which safely brings
# down the application after the stack has been wound down.
[profile.release]
panic = "unwind"
debug = 0

[profile.dev]
panic = "abort"
debug = 2
opt-level = 0
lto = "off"

[patch.crates-io]
banyan = { git = "https://github.com/Actyx/banyan", branch = "master" }
banyan-utils = { git = "https://github.com/Actyx/banyan", branch = "master" }
# cbor-data = { path = "../../../cbor-data" }
# ipfs-embed = { path = "../../../ipfs-embed" }
# libp2p = { path = "../../../rust-libp2p" }
