# Only have one member per line and the opening and ending on separate lines,
# since this is used in build scripts to populate the docker image cache!
[workspace]
members = [
  "ax",
  "node-ffi",
  "node-manager-bindings",
  "swarm/cli",
  "swarm/harness",
]
resolver = "2"

# This can only be set per workspace. In release, we rely on a setting a custom
# panic hook (see `node/src/util.rs::init_panic_hook`), which safely brings
# down the application after the stack has been wound down.
[profile.release]
panic = "unwind"
debug = 0

[profile.dev]
panic = "abort"
debug = 2
opt-level = 0
lto = "off"

[patch.crates-io]
banyan = { git = "https://github.com/Actyx/banyan", branch = "master" }
banyan-utils = { git = "https://github.com/Actyx/banyan", branch = "master" }
