[package]
name = "cosmos-release"
version = "0.1.0"
authors = ["Actyx AG"]
description = "Releases from Cosmos"
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
derive_more = "0.99"
env_logger = "0.8.4"
flate2 = "1.0.20"
git2 = "0.13"
itertools = "0.10.0"
log = "0.4.14"
rayon = "1.5.1"
regex = "1"
semver = { version = "0.11", features = ["serde"] }
tar = "0.4.35"
tempfile = "3.2.0"
zip = "0.5.13"
