[package]
name = "cosmos-release"
version = "0.1.0"
authors = ["Actyx AG"]
description = "Releases from Cosmos"
edition = "2018"

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = { version = "3.2.6", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.9.0"
flate2 = "1.0.24"
git2 = "0.13"
itertools = "0.10.3"
log = "0.4.17"
rayon = "1.5.3"
regex = "1.5.6"
semver = { version = "1.0.10", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tar = "0.4.38"
tempfile = "3.3.0"
zip = "0.6.2"
