[package]
name = "cosmos-release"
version = "0.1.0"
authors = ["Actyx AG"]
description = "Actyx release tool"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.10.1"
flate2 = "1.0.28"
git2 = "0.18.1"
itertools = "0.12.0"
log = "0.4.20"
rayon = "1.8.0"
regex = "1.10.2"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tar = "0.4.40"
tempfile = "3.8.1"
zip = "0.6.6"
