[package]
name = "actyx_sdk"
version = "0.3.0"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2018"
description = "Tools for interacting with the services of an Actyx node"
readme = "README.md"
documentation = "https://docs.rs/actyx_sdk"
homepage = "https://developer.actyx.com/"
repository = "https://github.com/Actyx/Actyx"
license = "Apache-2.0"
keywords = ["distributed", "decentralized", "event-sourcing"]
categories = ["network-programming"]

[package.metadata.docs.rs]
features = ["client", "dataflow"]

[features]
client = ["reqwest", "url", "bytes", "rand"]
dataflow = ["abomonation", "abomonation_derive"]
sqlite = ["rusqlite"]
postgresql = ["postgres-types", "bytes"]
arb = ["quickcheck", "rand"]
with-tokio = ["tokio"]

[dependencies]
abomonation = { version = "0.7.3", optional = true }
abomonation_derive = { version = "0.5.0", optional = true }
actyx_sdk_macros = { version = "0.1", path = "../sdk_macros" }
anyhow = "1.0.52"
async-trait = "0.1.52"
base64 = "0.13.0"
bytes = { version = "1.1.0", optional = true }
cbor-data = "0.8.15"
chrono = "0.4.19"
derive_more = "0.99.17"
fixed = { version = "1.11.0", features = [] }
futures = "0.3.19"
im = { version = "15.1.0", features = ["serde"] }
intern-arc = "0.5.0"
lazy_static = "1.4.0"
libipld = { version = "0.14.0", default-features = false, features = ["dag-cbor", "derive"] }
maplit = "1.0.2"
multibase = "0.9.1"
num-traits = "0.2.14"
once_cell = "1.9.0"
pest = "2.1.3"
pest_derive = "2.1.0"
postgres-types = { version = "0.2.2", optional = true }
quickcheck = { version = "1.0.3", optional = true }
rand = { version = "0.8.4", optional = true }
reduce = "0.1.4"
reqwest = { version = "0.11.8", features = ["json", "gzip", "stream", "native-tls-vendored", "multipart"], optional = true }
rusqlite = { version = "0.26.3", optional = true, features = ["bundled"] }
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_cbor = "0.11.2"
serde_json = "1.0.74"
serde-transcode = "1.1.1"
tokio = { version = "1.15.0", features = ["time"], optional = true }
tracing = "0.1.29"
typenum = "1.15.0"
unicode-normalization = "0.1.19"
url = { version = "2.2.2", optional = true }

[dev-dependencies]
asynchronous-codec = "0.6.0"
futures-timer = "3.0.2"
hex = "0.4.3"
quickcheck = "1.0.3"
quickcheck_derive = "0.3.0"
rand = "0.8.4"
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.6.9", features = ["compat"] }

[[example]]
name = "files"
path = "examples/files.rs"
required-features = ["client"]

[[example]]
name = "query"
path = "examples/query.rs"
required-features = ["client"]

[[example]]
name = "publish"
path = "examples/publish.rs"
required-features = ["client"]
