[package]
name = "ax_sdk"
version = "0.2.0"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2021"
description = "Tools for interacting with the services of an Actyx node"
readme = "README.md"
documentation = "https://docs.rs/actyx_sdk"
homepage = "https://developer.actyx.com/"
repository = "https://github.com/Actyx/Actyx"
license = "Apache-2.0"
keywords = ["distributed", "decentralized", "event-sourcing"]
categories = ["network-programming"]

[dependencies]
# Actyx related dependencies (for usage and re-export)
ax_types = { version = "0.1.0", path = "../actyx/ax-types" }
ax_aql = { version = "0.1.0", path = "../actyx/ax-aql" }

# Main dependencies
anyhow = "1.0.75"
bytes = "1.5.0"
derive_more = "0.99.17"
futures = "0.3.29"
libipld = { version = "0.14.0", default-features = false, features = [
    "dag-cbor",
    "derive",
] }
reqwest = { version = "0.11.22", default-features = false, features = [
    "rustls-tls",
    "multipart",
    "json",
    "stream",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_cbor = "0.11.2"
url = "2.5.0"
tracing = "0.1.40"

# This feature provides exponential backoff on requests
tokio = { version = "1.34.0", optional = true }


[[example]]
name = "files"
path = "examples/files.rs"
required-features = ["tokio"]

[[example]]
name = "query"
path = "examples/query.rs"
required-features = ["tokio"]

[[example]]
name = "publish"
path = "examples/publish.rs"
required-features = ["tokio"]

[[example]]
name = "publish_events"
path = "examples/publish_events.rs"
required-features = ["tokio"]

[[example]]
name = "publish_stream"
path = "examples/publish_stream.rs"
required-features = ["tokio"]

[[example]]
name = "query_bounds"
path = "examples/query_bounds.rs"
required-features = ["tokio"]

[[example]]
name = "subscribe_monotonic"
path = "examples/subscribe_monotonic.rs"
required-features = ["tokio"]

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"
required-features = ["tokio"]
