[package]
name = "actyx_sdk_macros"
version = "0.2.1"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2018"
description = "Tools for interacting with the services of an Actyx node"
readme = "README.md"
documentation = "https://docs.rs/actyx_sdk"
homepage = "https://developer.actyx.com"
license = "Apache-2.0"
keywords = ["distributed", "decentralized", "event-sourcing"]
categories = ["network-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.58", features = ["full", "extra-traits"] }
