[package]
name = "v1_migration"
version = "0.1.0"
authors = ["Actyx AG <developer@actyx.com>"]
edition = "2018"

[dependencies]
actyx_sdk = { path = "../sdk" }
anyhow = "1.0.42"
ax = { path = "../actyx/ax" }
base64 = "0.13.0"
crossterm = { version = "0.20.0", features = ["event-stream"] }
futures = "0.3.15"
ipfs-embed = { version = "=0.22.2", default-features = false, features = ["tokio"] }
libp2p = { version = "0.38.0", default-features = false, features = ["gossipsub", "ping"] }
multiaddr = "0.13.0"
node = { path = "../actyx/node" }
parking_lot = "0.11.1"
rusqlite = "0.25.3"
serde_json = "1.0.64"
settings = { path = "../actyx/settings" }
structopt = "0.3.22"
swarm = { path = "../actyx/swarm" }
tempfile = "3.2.0"
tokio = { version = "1.8.1", features = ["full"] }
tracing = "0.1.26"
trees = { path = "../actyx/trees" }
tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.8"
util = { path = "../actyx/util" }

[patch.crates-io]
# wait for ipfs-embed 0.22
ipfs-embed = { git = "https://github.com/dvc94ch/ipfs-embed", branch = "sim-open-2" }
libp2p = { git = "https://github.com/dvc94ch/rust-libp2p", branch = "sim-open-2" }
