[package]
name = "v1_migration"
version = "0.1.0"
authors = ["Actyx AG <developer@actyx.com>"]
edition = "2018"

[dependencies]
actyx_sdk = { path = "../sdk" }
anyhow = "1.0.42"
ax = { path = "../actyx/ax" }
base64 = "0.13.0"
crossterm = { version = "0.20.0", features = ["event-stream"] }
futures = "0.3.15"
ipfs-embed = { version = "0.22.3", default-features = false, features = ["tokio"] }
libp2p = { version = "0.40.0", default-features = false, features = ["gossipsub", "ping"] }
multiaddr = "0.13.0"
node = { path = "../actyx/node", features = ["migration-v1"] }
parking_lot = "0.11.1"
rusqlite = "0.25.3"
serde_json = "1.0.64"
settings = { path = "../actyx/settings" }
structopt = "0.3.22"
swarm = { path = "../actyx/swarm" }
tempfile = "3.2.0"
tokio = { version = "1.8.1", features = ["full"] }
tracing = "0.1.26"
trees = { path = "../actyx/trees" }
tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.8"
util = { path = "../actyx/util" }

[patch.crates-io]
# wait for ipfs-embed 0.23
ipfs-embed = { git = "https://github.com/Actyx/ipfs-embed", branch = "sim-open" }
libp2p = { git = "https://github.com/Actyx/rust-libp2p", branch = "sim-open" }
libp2p-bitswap = { git = "https://github.com/Actyx/libp2p-bitswap", branch = "sim-open" }
libp2p-broadcast = { git = "https://github.com/Actyx/libp2p-broadcast", branch = "sim-open-2" }
libp2p-quic = { git = "https://github.com/Actyx/libp2p-quic", branch = "sim-open-2" }
libp2p-blake-streams = { git = "https://github.com/Actyx/blake-streams", branch = "sim-open" }
