[package]
name = "actyxos-lib"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
actyxos_sdk = { version = "0.5", path = "../../sdk" }
ax-os-settings = { path = "../ax-os-settings" }
trees = { path = "../trees" }
libp2p-streaming-response = { path = "../libp2p-streaming-response" }

anyhow = "1.0.38"
async-trait = "0.1.42"
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam = "0.8.0"
derive_more = "0.99.11"
ffi-support = "0.4.2"
futures = { version = "0.3.12", package = "futures" }
lazy_static = "1.4.0"
libp2p = { version = "0.35.0", default-features = false, features = ["ping", "gossipsub", "yamux"] }
maplit = "1.0.2"
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = { version = "1.0.61", features = ["raw_value"] }
serde_yaml = "0.8.15"
tokio = { version = "1.2.0", features = ["full"], package = "tokio" }
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"

[target.'cfg(target_os = "android")'.dependencies]
rogcat = "0.4.1"

[dev-dependencies]
hyper = { package = "hyper", version = "0.14.2" }
