[package]
name = "api"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
actyx_sdk = { version = "0.6", path = "../../sdk" }
ax-futures-util = { path = "../ax-futures-util" }
crypto = { path = "../crypto" }
swarm = { path = "../swarm" }
runtime = { path = "../runtime" }
trees = { path = "../trees" }
actyx-util = { path = "../util", package = "util" }

anyhow = "1.0.40"
async-trait = "0.1.50"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.13"
futures = { version = "0.3.14", package = "futures" }
hyper = { version = "0.14.6", features = ["http1", "server", "tcp"], package = "hyper" }
itertools = "0.10.0"
libipld = { version = "0.12.0", default-features = false }
maplit = "1.0.2"
mime_guess = "2.0.3"
num-traits = "0.2.14"
parking_lot = "0.11.1"
pin-project = "1.0.7"
serde = { version = "1.0.125", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.64"
socket2 = "0.4.0"
thiserror = "1.0.24"
tokio = { version = "1.5.0", package = "tokio" }
tracing = "0.1.25"
tree_magic = "0.2.3"
warp = "0.3.1"
wsrpc = "0.1.3"

[dev-dependencies]
bytes = "1.0.1"
env_logger = "0.8.3"
futures-test = "0.3.14"
maplit = "1.0.2"
multihash = { version = "0.14.0", features = ["sha2"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
tokio = { version = "1.5.0", features = ["full"], package = "tokio" }
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.17"
