[package]
name = "api"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
actyx_sdk = { path = "../../sdk" }
ax-futures-util = { path = "../ax-futures-util" }
certs = { path = "../certs" }
crypto = { path = "../crypto" }
swarm = { path = "../swarm" }
runtime = { path = "../runtime" }
trees = { path = "../trees" }
actyx-util = { path = "../util", package = "util" }

anyhow = "1.0.42"
async-trait = "0.1.50"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam = "0.8.1"
derive_more = "0.99.16"
futures = { version = "0.3.15", package = "futures" }
hyper = { version = "0.14.10", features = ["http1", "server", "tcp"], package = "hyper" }
itertools = "0.10.1"
libipld = { version = "0.12.0", default-features = false }
maplit = "1.0.2"
mime_guess = "2.0.3"
num-traits = "0.2.14"
parking_lot = "0.11.1"
pin-project = "1.0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.64"
socket2 = "0.4.0"
thiserror = "1.0.26"
tokio = { version = "1.8.2", package = "tokio" }
tracing = "0.1.26"
tree_magic = "0.2.3"
warp = "0.3.1"
wsrpc = "0.2.0"
genawaiter = { version = "0.99.1", features = ["futures03"] }

[dev-dependencies]
bytes = "1.0.1"
env_logger = "0.9.0"
maplit = "1.0.2"
multihash = { version = "0.14.0", features = ["sha2"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
tokio = { version = "1.8.2", features = ["full"], package = "tokio" }
tracing-subscriber = "0.2.19"
