[package]
edition = { workspace = true }
name = "api"
version = "0.1.0"
authors = ["Actyx AG"]

[dependencies]
actyx-util = { path = "../util", package = "util" }
actyx_sdk = { path = "../../sdk" }

anyhow = "1.0.52"
async-trait = "0.1.52"
ax-futures-util = { path = "../ax-futures-util" }
base64 = "0.13.0"
bytes = "1.1.0"
certs = { path = "../certs" }
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam = "0.8.1"
crypto = { path = "../crypto" }
derive_more = "0.99.17"
futures = { version = "0.3.19", package = "futures" }
genawaiter = { version = "0.99.1", features = ["futures03"] }
http = "0.2.6"
hyper = { version = "0.14.16", features = ["http1", "server", "tcp"], package = "hyper" }
itertools = "0.10.3"
libipld = { version = "0.14.0", default-features = false }
maplit = "1.0.2"
mime_guess = "2.0.3"
num-traits = "0.2.14"
parking_lot = "0.12.1"
percent-encoding = "2.1.0"
pin-project = "1.0.10"
runtime = { path = "../runtime" }
serde = { version = "1.0.133", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.74"
socket2 = "0.4.2"
swarm = { path = "../swarm" }
thiserror = "1.0.30"
tokio = { version = "1.15.0", package = "tokio" }
tokio-stream = "0.1.8"
tracing = "0.1.29"
tree_magic_mini = "3.0.3"
trees = { path = "../trees" }
warp = "0.3.2"
wsrpc = "0.2.0"
zeroize = "1.2.0"

[dev-dependencies]
bytes = "1.1.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
multihash = { version = "0.16.3", features = ["sha2"] }
regex = "1.7.0"
serde_json = { version = "1.0.74", features = ["raw_value"] }
tokio = { version = "1.15.0", features = ["full"], package = "tokio" }
tracing-subscriber = "0.3.5"
