[package]
name = "ax_aql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ax_types = {version = "0.1.0", path = "../ax-types" }

pest = "2.1.3"
pest_derive = "2.1.0"
once_cell = "1.18.0"
chrono = "0.4.31"
derive_more = "0.99.17"
num-traits = "0.2.17"
anyhow = "1.0.75"
unicode-normalization = "0.1.22"
serde = {version="1.0.193", features = ["derive"]}

[dev-dependencies]
quickcheck = "1.0.3"
