[package]
name = "ax-config"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
actyxos-lib = { path = "../actyxos-lib" }
util = { path = "../util" }

anyhow = "1.0.38"
parity-multiaddr = "0.11.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
serde_with = "1.6.4"
tracing = "0.1.23"
