[package]
name = "ax_core"
version = "0.3.1"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2021"
description = "Core library implementing the functions of ax"
readme = "README.md"
documentation = "https://docs.rs/ax-core"
homepage = "https://developer.actyx.com/"
repository = "https://github.com/Actyx/Actyx"
license = "Apache-2.0"
keywords = ["distributed", "decentralized", "event-sourcing"]
categories = ["network-programming"]

[dependencies]
ax_sdk = { version = "0.2.0", path = "../../sdk" }
ax_aql = { version = "0.1.0", path = "../ax-aql" }
ax_types = { version = "0.1.0", path = "../ax-types", features = ["sqlite"] }

acto = { version = "0.2.0", features = ["tokio"] }
anyhow = "1.0.66"
# Only used by banyan_protocol
async-trait = "0.1.52"
backtrace = "0.3.63"
banyan = { version = "0.18.0", package = "ax_banyan" }
base64 = "0.13.0"
byteorder = { version = "1.4.3", features = ["i128"] }
bytes = "1.1.0"
cbor-data = { version = "0.8.15", features = [
  "derive",
  "libipld14",
  "rfc3339",
] }
cbor-tag-index = "0.3.0"
chacha20poly1305 = { version = "0.9.0", features = ["std"] }
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam = "0.8.1"
curve25519-dalek = "3.2.0"
derive_more = "0.99.17"
dirs = "4.0.0"
ed25519-dalek = { version = "1.0.1", features = [
  "serde",
], default-features = false }
ffi-support = "0.4.4"
fnv = "1.0.7"
fslock = "=0.1.6"
futures = { version = "0.3.29", features = ["compat"] }
genawaiter = { version = "0.99.1", features = ["futures03"] }
hex = "0.4.3"
http = "0.2.6"
hyper = { version = "0.14.16", features = ["http1", "server", "stream", "tcp"] }
im = { version = "15.1.0", features = ["serde"] }
ipfs-embed = { version = "0.26.1", default-features = false, features = [
  "tokio",
] }
ipfs-sqlite-block-store = "0.13.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
libipld = { version = "0.14.0", features = ["dag-cbor", "derive"] }
libp2p = { version = "0.50.0", default-features = false, features = [
  "dns",
  "gossipsub",
  "macros",
  "noise",
  "ping",
  "plaintext",
  "request-response",
  "tcp",
  "tokio",
] }
log = { version = "0.4.14", features = ["std"] }
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
maplit = "1.0.2"
mime_guess = "2.0.3"
multiaddr = "0.16.0"
multihash = { version = "0.16.3", features = ["identity"] }
names = "0.13.0"
num-bigint = "0.4.3"
once_cell = "1.17.1"
parking_lot = "0.12.1"
percent-encoding = "2.1.0"
pin-project = "1.0.10"
pin-project-lite = "0.2.8"
prometheus = "0.13.0"
rand = "0.7"
range-collections = "0.1.1"
regex = "1.10"
rusqlite = { version = "0.26.3", features = ["bundled", "backup", "hooks"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.79"
sha2 = "0.9.9"
signal-hook = "0.3.13"
smallvec = { version = "1.10.0", features = ["const_generics", "write"] }
socket2 = "0.4.2"
thiserror = "1.0.30"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.8"
tracing = { version = "0.1.37", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
tracing-core = "0.1.21"
tracing-log = { version = "0.1.2", features = ["std"] }
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
tree_magic_mini = "3.0.3"
treediff = { version = "4.0.2", features = ["with-serde-json"] }
trust-dns-resolver = "0.22.0"
tungstenite = { version = "0.16.0" }
unixfs-v1 = "0.3.0"
url = "2.2.2"
uuid = "0.8.2"
valico = "3.6.0"
vec-collections = "0.3.5"
void = "1.0.2"
warp = "0.3.5"
wsrpc = "0.2.0"
zstd = "0.9.2"
stacker = "0.1.15"

[dev-dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
assert_cmd = "2.0.2"
criterion = { version = "0.3.5", features = ["html_reports", "async_tokio"] }
derive_more = "0.99.17"
libp2p = { version = "0.50.0", features = ["yamux", "plaintext"] }
multihash = { version = "0.16.3", features = ["sha2"] }
pretty_assertions = "1.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = { version = "0.11.12", default-features = false, features = [
  "blocking",
] }
serde_json = { version = "1.0.74", features = ["raw_value"] }
tempfile = "3.3.0"
tokio = { version = "1.34.0", features = ["test-util"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
jemallocator = "0.3.2"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[[bench]]
name = "local_event_roundtrip"
harness = false

[[bench]]
name = "signing"
harness = false

[[bench]]
name = "bench_runtime_query"
harness = false
