[package]
name = "ax-futures-util"
version = "0.1.0"
authors = [ "Actyx AG" ]
edition = "2018"

[features]
with_tokio = ["tokio"]
default = ["with_tokio"]

[dependencies]
fnv = "1.0.7"
futures = { version = "0.3.19", package = "futures" }
itertools = "0.10.3"
parking_lot = "0.11.2"
pin-project-lite = "0.2.8"
tokio = { version = "1.15.0", features = [ "time" ], optional = true, package = "tokio" }
tokio-stream = "0.1.7"
tracing = { version = "0.1.29", features = ["max_level_trace", "release_max_level_trace"] }

[dev-dependencies]
anyhow = "1.0.52"
rand = "0.8.4"
tokio = { version = "1.15.0", features = [ "full" ], package = "tokio" }
